--- a/helm-webapp/values.yaml
+++ b/helm-webapp/values.yaml
@@ -3,7 +3,7 @@ appName: myhelmapp
 configmap:
   name: myhelmapp-configmap-v1
   data:
-    CUSTOM_HEADER: 'Welcome to NGINX on ROSA! By Venkatesh'
+    CUSTOM_HEADER: 'Welcome to NGINX on ROSA! By Sathish'
 
 image:
   name: venkateshvgs/rosaargocd
